--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -1,6 +1,6 @@
 \selectlanguage{ngerman}
-\chapter*{***Zusammenfassung}
-\addcontentsline{toc}{chapter}{\protect Zusammenfassung}
+\chapter*{Zusammenfassung}
+\addcontentsline{toc}{chapter}{\protect ***Zusammenfassung}
 
 ***Hier steht eine maximal einseitige Zusammenfassung der
 Dissertation.
