diss: deleting stars in chapter 2

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -551,7 +551,7 @@ while the imprecise probability framework may use such behavior actively in mode
 in particular in the context of prior-data conflict
 (see Sections~\ref{sec:motivation:pdc} and \ref{sec:pdc-sensitivity}).
 
-\subsubsection{Critique***}
+\subsubsection{Critique}
 \label{sec:updating}
 
 %***on updating and conditioning; also conditioning versus belief revision (itip-special, other?)***
@@ -623,7 +623,7 @@ how models along this approach can be modified to cater for `bonus precision'
 if prior and data coincide especially well.
 
 
-\subsection{A Brief Glance on Related Concepts***}
+\subsection{A Brief Glance on Related Concepts}
 \label{sec:ip-related}
 
 %****as separate section 2.3?****
