--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -1,7 +1,8 @@
 \chapter{Generalised Bayesian Inference with Sets of Conjugate Priors in Exponential Families}
 \label{cha:imprecisebayes-conjugate}
 
-Imprecise probability models based on conjugate priors are an important model class,
+The imprecise probability models based on conjugate priors we will discuss in this chapter
+are an important model class,
 and have been central to the development and application of imprecise probability methods
 in statistical inference.
 They have lead to the so-called \emph{Imprecise Dirichlet model} (IDM, see Section~\ref{sec:idm-and-near-ignorance} below)
